Fix Sonar warning avoid regex with potential backtracking (ReDoS risk)
Signed-off-by: lance <leehaut@gmail.com>